packages/cashc/test/syntax/success/empty_functions.cash
contract Test() {
    function hello() {
    }

    function world() {
    }
}
