packages/cashc/test/syntax/fail/function_with_type_name.cash
contract Test(int x, string y) {
    function bytes(sig s, pubkey pk) {
    }
}
